# HRSM-Skeleton

./: .#flake.nix  .gitignore  .nixfmt.toml  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.local  flake.nix  flake.nix~  home.nix  package.json  project-tree.txt
.github/workflows/: ci.yml  ci.yml~
backend/: backend.cabal
backend/app/: Main.hs
backend/src/: Backend.hs  DB.hs
backend/src-bin/: Main.hs
common/: common.cabal
common/src/Common/: Api.hs  Types.hs  backend.cabal
frontend/: README.md  frontend.cabal  index.html  loader.d.ts  loader.ts  main.ts  start-frontend.sh
frontend-wasm/: Main.hs  Main.hs~  NGOWidgets.hs  frontend-wasm.cabal
frontend/app/: Main.hs
frontend/src/: Frontend.hs  Frontend.hs~
frontend/src-bin/: Main.hs
logistics-client/: logistics-client.cabal
logistics-client/scripts/: build-client.sh
logistics-client/src/: Main.hs  WASMExports.hs  client.sccs
logistics-client/static/: client-boot.js  index.html
logistics-common/: logistics-common.cabal
logistics-common/src/: Types.hs
logistics-server/: NGOLogisticsCG.cabal  NGOLogisticsCG.cabal~
logistics-server/src/: API.hs  Auth.hs  DB.hs  Main.hs
logistics-server/src/Middleware/: RateLimit.hs
nix/: wasm-overlay
pkgs/: minimal-wasi-toolchain.nix  wasm32-wasi-ghc-full.nix  wasm32-wasi-sdk.nix  wastimewasi-toolchain.nix
scripts/: build-reacto-wasi.sh  build-reactor-wasm.nix  build-wasm.sh  cleanup-bootstrap.sh  cleanup-project.sh  cleanup.sh  init-tree.sh  link-reactor.sh  mkcerts.sh  openssl.sh  prune-vendor.sh  run-wasm.sh  serve-wasm.sh  setenv.sh
shared/: shared.cabal
shared/src/Shared/: API.hs
src/: reactor_wrapper.c  wasm-reactor.ld
src/wasm/: loadReactor.ts  reactor.d.ts
wasm-modules/src/: Main.hs
