cabal-version:      3.8
name:               backend
version:            0.1.0.0
build-type:         Simple

executable backend
  main-is: Main.hs

  hs-source-dirs:
    app

  build-depends:
      base
    , servant
    , servant-server
    , wai
    , warp
    , sqlite-simple
    , directory
    , filepath
    , text
    , time
    , shared

  default-language: Haskell2010
