cabal-version: 3.0
name: common
version: 0.1.0.0
license: BSD-3-Clause
build-type: Simple

library
  exposed-modules:
    Common.Api
    Common.Types

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Werror

  build-depends:
    base >= 4.7 && < 5,
    aeson,
    text,
    servant-server, -- Used for API type definition
    servant-client
