cabal-version: 3.0
name: frontend
version: 0.1.0.0
license: BSD-3-Clause
build-type: Simple

common deps
  build-depends:
    base >= 4.7 && < 5,
    common,
    reflex,
    reflex-dom,
    servant-client-core,
    ghcjs-dom,
    jsaddle-warp

library
  import: deps
  exposed-modules:
    Frontend

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Werror

executable frontend
  import: deps
  main-is: Main.hs
  hs-source-dirs: src-bin
  default-language: Haskell2010
  
