cabal-version: 2.4
name: logistics-client
version: 0.1.0.0
synopsis: WASM browser client for logistics (ghc-wasm-meta)
license: MIT
author: You

executable logistics-client
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -O2
  build-depends:
    base >=4.14 && <5,
    aeson,
    bytestring,
    text,
    logistics-common
  default-language: Haskell2010
  
