cabal-version: 2.4
name: NGOLogisticsCG
version: 0.1.0.0

executable logistics-server
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    base,
    text,
    bytestring,
    aeson,
    servant,
    servant-server,
    servant-auth-server,
    wai,
    warp,
    warp-tls,
    wai-cors,
    mysql-simple,
    resource-pool,
    containers,
    time,
    stm,
    mtl,
    transformers,
    logistics-common
  default-language: Haskell2010

  
